# IC_G07_Proj3

./: README.md
Part_I/: CMakeLists.txt  Makefile  fcm.cpp  fcm.hpp
Part_I/test_programs/: fcmTest  fcmTest.cpp
Part_I/test_programs/models/: modelOrder1_pt_PT.Portugese-latn-EP7-train.utf8.txt  modelOrder2_pt_PT.Portugese-latn-EP7-train.utf8.txt  modelOrder3_pt_PT.Portugese-latn-EP7-train.utf8.txt  modelOrder4_pt_PT.Portugese-latn-EP7-train.utf8.txt  modelOrder5_pt_PT.Portugese-latn-EP7-train.utf8.txt  modelOrder6_pt_PT.Portugese-latn-EP7-train.utf8.txt  model_pt_PT.Portugese-latn-EP7-devtest.utf8.txt
Part_I/test_programs/test_files/: de_DE.German-latn-EP7-train.utf8  en_GB.English-latn-EP7-train.utf8  es_ES.Spanish-latn-EP7-train.utf8  (+1 more)
Part_II/: CMakeLists.txt  Makefile  findlang.cpp  findlang.hpp  lang.cpp  lang.hpp  locatelang.cpp  locatelang.hpp
Part_II/test_programs/: findlangTest  findlangTest.cpp  langTest  langTest.cpp  locatelangTest  locatelangTest.cpp
Part_II/test_programs/language_files/: fr_FR.French-latn-EP7-train.utf8
Part_II/test_programs/models/: modelOrder5_alb_AL.Albanian-latn-wiki-test.utf8.txt  modelOrder5_ar_XX.Arabic-wiki-train.utf8.txt  modelOrder5_de_DE.German-latn-EP7-train.utf8.txt  modelOrder5_en_GB.English-latn-EP7-train.utf8.txt  modelOrder5_es_ES.Spanish-latn-EP7-train.utf8.txt  modelOrder5_fr_FR.French-latn-EP7-train.utf8.txt  modelOrder5_it_IT.Italian-latn-EP7-train.utf8.txt  modelOrder5_pt_PT.Portugese-latn-EP7-train.utf8.txt  modelOrder5_ru_RU.Russian-wiki-train.utf8.txt  modelOrder5_sv_SE.Swedish-latn-EP7-train.utf8.txt
